disabled armhf build and turned on auto deploy for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: bash
 
 env:
   - ARCH=amd64
-  - ARCH=armhf
+#  - ARCH=armhf
 
 services:
   - docker
@@ -15,10 +15,10 @@ before_install:
 script:
   - export TEST_HOST=127.0.0.1 && ./test.sh
 
-# Disabled automatic deployment - needs work for armhf image
-#after_success:
-#  - if [ "$TRAVIS_BRANCH" == "master" ]; then
-#    docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-#    docker push syphr/webtts:$ARCH;
-#    fi
+# Automatic deployment does not work for armhf build (chroot is required)
+after_success:
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    docker push syphr/webtts:$ARCH;
+    fi
 
