--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
 # Automatic deployment does not work for armhf build (chroot is required)
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
     docker push syphr/webtts:$ARCH;
     fi
 
