--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ services:
 before_install:
   - if [ "${ARCH}" = "armhf" ]; then
       ./setup-chroot-armhf.sh;
-      sudo chroot ${CHROOT_DIR} echo "Environment - $(uname -a)";
+      sudo chroot ${CHROOT_DIR} bash -c "echo 'Environment - $(uname -a)'";
     else
       echo "Environment - $(uname -a)";
     fi
