--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: bash
 
 env:
   - ARCH=amd64
-  - ARCH=armhf CHROOT_DIR=/tmp/chroot
+#  - ARCH=armhf CHROOT_DIR=/tmp/chroot
 
 services:
   - docker
